feat: 博客初始化

--- a/docs/00.目录页/03.技术.md
+++ b/docs/00.目录页/03.技术.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 03.技术
-    imgUrl: /img/other.png
+    imgUrl: /assets/img/other.png
     description: 技术文档、教程、技巧、总结等文章
 title: 技术
 date: 2020-03-11 21:50:55
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: mali
-  link: 
+  link: https://github.com/13564574673/vdoing-ml-blog
 ---
