--- a/docs/00.目录页/01.前端.md
+++ b/docs/00.目录页/01.前端.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 01.前端
-    imgUrl: /img/web.png
+    imgUrl: /assets/img/web.png
     description: JavaScript、ES6、Vue框架等前端技术
 title: 前端
 date: 2020-03-11 21:50:53
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: mali
-  link: 
+  link: https://github.com/13564574673/vdoing-ml-blog
 ---
