--- a/docs/00.目录页/04.更多.md
+++ b/docs/00.目录页/04.更多.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 04.更多
-    imgUrl: /img/more.png
+    imgUrl: /assets/img/more.png
     description: 学习、面试、在线工具等更多文章和页面
 title: 更多
 date: 2020-03-11 21:50:56
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: mali
-  link: 
+  link: https://github.com/13564574673/vdoing-ml-blog
 ---
